HelloUltraviolet/Fixtures/RejectedSource/Statements/UnsafeStatementsDiagnostic/Expected.uv
//! Expected diagnostic metadata for the UnsafeStatementsDiagnostic rejected-source specimen.

expectedDiagnostic("E-MOD-2402", "diag.18.UnsafeStatements")
